tests/ui/symbol-names/types.verbose-legacy.stderr
error: symbol-name(_ZN1a1b16Type$LT$bool$GT$17h[HASH]E)
  --> $DIR/types.rs:17:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<bool>::h[HASH])
  --> $DIR/types.rs:17:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<bool>)
  --> $DIR/types.rs:17:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b16Type$LT$char$GT$17h[HASH]E)
  --> $DIR/types.rs:26:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<char>::h[HASH])
  --> $DIR/types.rs:26:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<char>)
  --> $DIR/types.rs:26:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b14Type$LT$i8$GT$17h[HASH]E)
  --> $DIR/types.rs:35:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<i8>::h[HASH])
  --> $DIR/types.rs:35:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<i8>)
  --> $DIR/types.rs:35:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$i16$GT$17h[HASH]E)
  --> $DIR/types.rs:44:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<i16>::h[HASH])
  --> $DIR/types.rs:44:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<i16>)
  --> $DIR/types.rs:44:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$i32$GT$17h[HASH]E)
  --> $DIR/types.rs:53:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<i32>::h[HASH])
  --> $DIR/types.rs:53:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<i32>)
  --> $DIR/types.rs:53:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$i64$GT$17h[HASH]E)
  --> $DIR/types.rs:62:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<i64>::h[HASH])
  --> $DIR/types.rs:62:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<i64>)
  --> $DIR/types.rs:62:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b14Type$LT$u8$GT$17h[HASH]E)
  --> $DIR/types.rs:71:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<u8>::h[HASH])
  --> $DIR/types.rs:71:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<u8>)
  --> $DIR/types.rs:71:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$u16$GT$17h[HASH]E)
  --> $DIR/types.rs:80:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<u16>::h[HASH])
  --> $DIR/types.rs:80:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<u16>)
  --> $DIR/types.rs:80:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$u32$GT$17h[HASH]E)
  --> $DIR/types.rs:89:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<u32>::h[HASH])
  --> $DIR/types.rs:89:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<u32>)
  --> $DIR/types.rs:89:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$u64$GT$17h[HASH]E)
  --> $DIR/types.rs:98:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<u64>::h[HASH])
  --> $DIR/types.rs:98:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<u64>)
  --> $DIR/types.rs:98:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$f16$GT$17h[HASH]E)
  --> $DIR/types.rs:107:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<f16>::h[HASH])
  --> $DIR/types.rs:107:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<f16>)
  --> $DIR/types.rs:107:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$f32$GT$17h[HASH]E)
  --> $DIR/types.rs:116:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<f32>::h[HASH])
  --> $DIR/types.rs:116:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<f32>)
  --> $DIR/types.rs:116:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$f64$GT$17h[HASH]E)
  --> $DIR/types.rs:125:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<f64>::h[HASH])
  --> $DIR/types.rs:125:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<f64>)
  --> $DIR/types.rs:125:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b16Type$LT$f128$GT$17h[HASH]E)
  --> $DIR/types.rs:134:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<f128>::h[HASH])
  --> $DIR/types.rs:134:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<f128>)
  --> $DIR/types.rs:134:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b15Type$LT$str$GT$17h[HASH]E)
  --> $DIR/types.rs:143:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<str>::h[HASH])
  --> $DIR/types.rs:143:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<str>)
  --> $DIR/types.rs:143:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b17Type$LT$$u21$$GT$17h[HASH]E)
  --> $DIR/types.rs:152:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<!>::h[HASH])
  --> $DIR/types.rs:152:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<!>)
  --> $DIR/types.rs:152:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b20Type$LT$$LP$$RP$$GT$17h[HASH]E)
  --> $DIR/types.rs:161:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<()>::h[HASH])
  --> $DIR/types.rs:161:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<()>)
  --> $DIR/types.rs:161:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b25Type$LT$$LP$u8$C$$RP$$GT$17h[HASH]E)
  --> $DIR/types.rs:170:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<(u8,)>::h[HASH])
  --> $DIR/types.rs:170:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<(u8,)>)
  --> $DIR/types.rs:170:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b28Type$LT$$LP$u8$C$u16$RP$$GT$17h[HASH]E)
  --> $DIR/types.rs:179:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<(u8,u16)>::h[HASH])
  --> $DIR/types.rs:179:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<(u8,u16)>)
  --> $DIR/types.rs:179:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b34Type$LT$$LP$u8$C$u16$C$u32$RP$$GT$17h[HASH]E)
  --> $DIR/types.rs:188:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<(u8,u16,u32)>::h[HASH])
  --> $DIR/types.rs:188:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<(u8,u16,u32)>)
  --> $DIR/types.rs:188:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b28Type$LT$$BP$const$u20$u8$GT$17h[HASH]E)
  --> $DIR/types.rs:197:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<*const u8>::h[HASH])
  --> $DIR/types.rs:197:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<*const u8>)
  --> $DIR/types.rs:197:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b26Type$LT$$BP$mut$u20$u8$GT$17h[HASH]E)
  --> $DIR/types.rs:206:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<*mut u8>::h[HASH])
  --> $DIR/types.rs:206:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<*mut u8>)
  --> $DIR/types.rs:206:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b19Type$LT$$RF$str$GT$17h[HASH]E)
  --> $DIR/types.rs:215:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<&str>::h[HASH])
  --> $DIR/types.rs:215:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<&str>)
  --> $DIR/types.rs:215:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b27Type$LT$$RF$mut$u20$str$GT$17h[HASH]E)
  --> $DIR/types.rs:224:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<&mut str>::h[HASH])
  --> $DIR/types.rs:224:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<&mut str>)
  --> $DIR/types.rs:224:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b35Type$LT$$u5b$u8$u3b$$u20$0$u5d$$GT$17h[HASH]E)
  --> $DIR/types.rs:233:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<[u8; 0]>::h[HASH])
  --> $DIR/types.rs:233:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<[u8; 0]>)
  --> $DIR/types.rs:233:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b22Type$LT$fn$LP$$RP$$GT$17h[HASH]E)
  --> $DIR/types.rs:242:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<fn()>::h[HASH])
  --> $DIR/types.rs:242:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<fn()>)
  --> $DIR/types.rs:242:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b60Type$LT$unsafe$u20$extern$u20$$u22$C$u22$$u20$fn$LP$$RP$$GT$17h[HASH]E)
  --> $DIR/types.rs:251:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<unsafe extern "C" fn()>::h[HASH])
  --> $DIR/types.rs:251:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<unsafe extern "C" fn()>)
  --> $DIR/types.rs:251:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b34Type$LT$$u5b$T$u3b$$u20$N$u5d$$GT$17h[HASH]E)
  --> $DIR/types.rs:260:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<[T; N]>::h[HASH])
  --> $DIR/types.rs:260:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<[T; N]>)
  --> $DIR/types.rs:260:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: symbol-name(_ZN1a1b35Type$LT$$u5b$u8$u3b$$u20$0$u5d$$GT$17h[HASH]E)
  --> $DIR/types.rs:271:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(a::b::Type<[u8; 0]>::h[HASH])
  --> $DIR/types.rs:271:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(a::b::Type<[u8; 0]>)
  --> $DIR/types.rs:271:5
   |
LL |     #[rustc_dump_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 87 previous errors

